# libhdsp

./: .gitignore  Makefile.am  README.md  README.txt  autogen.sh  commands.txt  configure.ac
include/: hdsp.h  lhdsp.h
src/: hdsp.c  hdsptool.c  lhdsp.c  lhdsp.lo
test/: hdsptool.c  noisy8khz.raw  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c
