AC_INIT([libhdsp], [1.0.0], [info@dataandsignal.com, bugs: https://github.com/dataandsignal/libhdsp/issues], [libhdsp], [dataandsignal.com])
AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror foreign])
AC_PROG_CC

AM_PROG_AR
LT_INIT

AC_CANONICAL_HOST

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
